--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "example": "example"
   },
   "scripts": {
-    "test": "node test"
+    "test": "node test",
+    "preversion": "npm test",
+    "postversion": "git push --follow-tags"
   },
   "author": "luke kaalim (luke@kaal.im)",
   "license": "MIT",
