Add api models endpoint support

--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "dependencies": {
+    "@lukekaalim/cast": "^1.0.0",
+    "@lukekaalim/http-client": "^2.5.0",
     "@lukekaalim/server": "file:.."
   }
 }
