--- a/package.json
+++ b/package.json
@@ -1,38 +1,11 @@
 {
-  "name": "@lukekaalim/server",
-  "version": "9.4.1",
-  "description": "Simple utility library for defining a node server listener from a series of routes",
-  "main": "src/main.js",
-  "directories": {
-    "example": "example",
-    "tests": "tests"
-  },
-  "scripts": {
-    "prepare": "cd tests; npm i --no-save; echo \"Installed test project\"",
-    "test": "cd tests; npm test",
-    "preversion": "npm test",
-    "postversion": "git push --follow-tags"
-  },
-  "author": "luke kaalim (luke@kaal.im)",
-  "license": "MIT",
-  "devDependencies": {
-    "flow-bin": "^0.144.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lukekaalim/server.git"
-  },
-  "keywords": [
-    "rest",
-    "http",
-    "server"
+  "private": true,
+  "workspaces": [
+    "server",
+    "tests",
+    "example"
   ],
-  "bugs": {
-    "url": "https://github.com/lukekaalim/server/issues"
-  },
-  "homepage": "https://github.com/lukekaalim/server#readme",
-  "dependencies": {
-    "@lukekaalim/api-models": "^3.0.2",
-    "@lukekaalim/cast": "^1.0.0"
+  "scripts": {
+    "test": "cd tests; npm test"
   }
 }
