--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,10 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 version: 2
 jobs:
-  test:
-    working_directory: ~/repo/tests
+  install:
+    working_directory: ~/repo
     docker:
-      - image: circleci/node:14
+      - image: circleci/node:16
     steps:
       - checkout
       - restore_cache:
@@ -13,21 +13,23 @@ jobs:
             - modules-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - modules-
-
       - run: npm ci install
-
       - save_cache:
           paths:
             - node_modules
           key: modules-{{ checksum "package.json" }}
 
-      - run: npm test
-  deploy:
-    working_directory: ~/repo
+  test:
+    working_directory: ~/repo/tests
     docker:
       - image: circleci/node:14
     steps:
-      - checkout
+      - run: npm test
+  deploy:
+    working_directory: ~/repo/server
+    docker:
+      - image: circleci/node:14
+    steps:
       - run:
           name: Publish package
           command: |
@@ -37,11 +39,14 @@ workflows:
   commit:
     jobs:
       - test:
+          requires:
+            - install
           filters:  # required since `deploy` has tag filters AND requires `build`
             tags:
               only: /.*/
       - deploy:
           requires:
+            - install
             - test
           filters:
             branches:
