--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,6 @@ jobs:
           paths:
             - node_modules
           key: modules-{{ checksum "package.json" }}
-
   test:
     working_directory: ~/repo/tests
     docker:
@@ -38,6 +37,7 @@ workflows:
   version: 2
   commit:
     jobs:
+      - install
       - test:
           requires:
             - install
