--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 version: 2
 jobs:
-  install:
+  test:
     working_directory: ~/repo
     docker:
       - image: circleci/node:16
@@ -18,17 +18,13 @@ jobs:
           paths:
             - node_modules
           key: modules-{{ checksum "package.json" }}
-  test:
-    working_directory: ~/repo
-    docker:
-      - image: circleci/node:14
-    steps:
       - run: npm test
   deploy:
     working_directory: ~/repo/server
     docker:
       - image: circleci/node:14
     steps:
+      - checkout
       - run:
           name: Publish package
           command: |
@@ -37,16 +33,12 @@ workflows:
   version: 2
   commit:
     jobs:
-      - install
       - test:
-          requires:
-            - install
           filters:  # required since `deploy` has tag filters AND requires `build`
             tags:
               only: /.*/
       - deploy:
           requires:
-            - install
             - test
           filters:
             branches:
